Fixed issue with favouritesList being larger than parent on mobile devices

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -335,7 +335,8 @@ svg {
   overflow: hidden;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  height: 100%; }
   .listContainer .countryList, .listContainer .favouriteList {
     list-style: none;
     overflow-y: scroll;
