--- a/src/styles/scss/_list.scss
+++ b/src/styles/scss/_list.scss
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
 
     .countryList, .favouriteList {
         list-style: none;
